# linalg

./: CMakeLists.txt  LICENSE  Makefile  README.md  dependencies.txt
.github/workflows/: ci.yml  deploy_html.yml
cmake/: .clang-format  .clang-tidy  Doxygen.cmake  clang-format.cmake  clang-tidy.cmake  lto.cmake  sanitizers.cmake  warnings.cmake
docs/: Doxyfile.in
docs/html/: Alignment_8hpp.html  Alignment_8hpp__dep__incl.map  Alignment_8hpp__dep__incl.md5  Alignment_8hpp__incl.map  Alignment_8hpp__incl.md5  Alignment_8hpp_source.html  Example_8cpp.html  Example_8cpp__incl.map  Example_8cpp__incl.md5  Example_8hpp.html  Example_8hpp__dep__incl.map  Example_8hpp__dep__incl.md5  Example_8hpp_source.html  Mat3_8hpp.html  Mat3_8hpp__dep__incl.map  Mat3_8hpp__dep__incl.md5  Mat3_8hpp__incl.map  Mat3_8hpp__incl.md5  Mat3_8hpp_source.html  Mat4_8hpp.html  Mat4_8hpp__dep__incl.map  Mat4_8hpp__dep__incl.md5  Mat4_8hpp__incl.map  Mat4_8hpp__incl.md5  Mat4_8hpp_source.html  SanitizerTests_8cpp.html  SanitizerTests_8cpp__incl.map  SanitizerTests_8cpp__incl.md5  SanitizerTests_8hpp.html  SanitizerTests_8hpp_source.html  Vec2_8hpp.html  Vec2_8hpp__dep__incl.map  Vec2_8hpp__dep__incl.md5  Vec2_8hpp__incl.map  Vec2_8hpp__incl.md5  Vec2_8hpp_source.html  Vec3_8hpp.html  Vec3_8hpp__dep__incl.map  Vec3_8hpp__dep__incl.md5  Vec3_8hpp__incl.map  (+77 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_a.js  functions_d.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js
include/: Alignment.hpp  Mat3.hpp  Mat4.hpp  SanitizerTests.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  linalg.hpp
include/ModuleExample/: Example.hpp
include/linalg/: Alignment.hpp  Mat3.hpp  Mat4.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  linalg.hpp
src/: SanitizerTests.cpp  main.cpp
src/ModuleExample/: CMakeLists.txt  Example.cpp
tests/: CMakeLists.txt  ExampleTests.cpp  Mat3Tests.cpp  Mat4Tests.cpp  Vec2Tests.cpp  Vec3Tests.cpp  Vec4Tests.cpp  linalgTests.cpp
tests/coverage_report/: coverage_report.Example.cpp.06ed750f22d4eecf54e1d1e1f1eeaa03.html  coverage_report.Mat3.hpp.2d95dc1d4d40879aec60ff600a6e530c.html  coverage_report.Mat3.hpp.3699f8ef5d4087fcc78d9821763c86e0.html  coverage_report.Mat4.hpp.a5d121688f697725e7e3baa98c4136bb.html  coverage_report.Mat4.hpp.a8630f8484dc1b5b8e653329a2563803.html  coverage_report.SanitizerTests.cpp.1f508243dc1572d5c5e9bb1275df61b1.html  coverage_report.Vec2.hpp.55ad09ddf404dca31a57c2488f9eb3ab.html  coverage_report.Vec2.hpp.b4c4a775cb958de80928c5a82e54bc13.html  coverage_report.Vec3.hpp.1c9c285f8ee49c8a4f7027aff7c62492.html  coverage_report.Vec3.hpp.8212d51bf0c4311d409d96727f4510c0.html  coverage_report.Vec4.hpp.d94c680ab4e641278ced7102eefdf29d.html  coverage_report.Vec4.hpp.ea76f1e700481e46f6d9fa5cb83fe0d8.html  coverage_report.functions.html  coverage_report.html  coverage_report.json  coverage_report.linalg.hpp.4fe3f6b7340a6f0dabb94fcecd22f7d9.html  coverage_report.linalg.hpp.971c73edc1a6ed7600a207b9abd40f3e.html
